--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="#">
-    <title>Expensify App</title>
+    <title>Expense Tracking</title>
 </head>
 
 <body>
