--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="#">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css">
     <title>Expense Tracking</title>
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
